GNOME Bugzilla – Bug 767385
missing icon
Last modified: 2016-06-08 15:47:54 UTC
Created attachment 329373 [details] screenshot window of gnome-disk-utility (gnome disks) is missing the top-left icon see the screenshot I'm on Arch Linux x86_64 with gnome-disk-utility 3.20.2
Thanks for reporting. The following fix has been pushed: e2ad59a window: Set icon-name properly
Created attachment 329404 [details] [review] window: Set icon-name properly This is required else we miss the icon on our app menu when shown in the window.