window: Set icon-name properly

This is required else we miss the icon on our app menu when shown in the
window.

https://bugzilla.gnome.org/show_bug.cgi?id=767385