src/disks/gduwindow.c
@@ -1016,6 +1016,8 @@ gdu_window_constructed (GObject *object)
   if (G_OBJECT_CLASS (gdu_window_parent_class)->constructed != NULL)
     G_OBJECT_CLASS (gdu_window_parent_class)->constructed (object);
 
+  gtk_window_set_icon_name (GTK_WINDOW (window), "gnome-disks");
+
   /* load UI file */
   gdu_application_new_widget (window->application, "disks.ui", NULL, &window->builder);
 
